--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@types/jquery": "^3.5.29",
     "bootstrap": "4.6",
     "font-awesome": "4.7",
     "jquery": "^3.7.1",
